--- a/metadata.yaml
+++ b/metadata.yaml
@@ -36,5 +36,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Swedish fiction -- Translations into Dutch'
 - !lcc 'PT'
+- GITenberg
 title: Vonken
 url: http://www.gutenberg.org/ebooks/38920
